deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
        - name: multitool
          image: wbitt/network-multitool:latest
          command: ["/bin/sh", "-c"]
          args:
            - sleep infinity
      volumes:
        - name: web-content
          configMap:
            name: web-content
